Added basic marker drawing and clear button (step 2)
- Added support for multiple tool buttons in the sidebar
- Implemented a clear button to clear the canvas
- Refactored code for better organization and readability

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <script type="module" src="./src/main.ts"></script>
     <h1>Super Doodle 🎨</h1>
     <div class="main-window-container">
-      <div class="sidebar">Text</div>
+      <div class="sidebar" id="left-toolbar"></div>
       <canvas id="main-canvas"></canvas>
-      <div class="sidebar">Text</div>
+      <div class="sidebar" id="right-toolbar"></div>
     </div>
   </body>
 </html>
