Adapted tool and command interfaces to support a sticker tool

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
       <canvas id="main-canvas"></canvas>
       <div class="sidebar" id="right-toolbar"></div>
     </div>
+    <div class="sticker-window"></div>
   </body>
 </html>
