Added sticker placement and allow sticker creation from text (step 8)

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
       <canvas id="main-canvas"></canvas>
       <div class="sidebar" id="right-toolbar"></div>
     </div>
-    <div class="sticker-window"></div>
+    <div id="tool-options-window" class="window">
+      <h3 style="margin: 0 0 0.5rem 0; user-select: none">Tool Options</h3>
+      <div id="tool-options-content">
+        <!-- Tool options will be dynamically added here -->
+      </div>
+    </div>
   </body>
 </html>
